<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="#f5f5f5"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.project.indotuber.fonts.MontserratBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_title"
                android:textColor="#555555"
                android:textSize="18sp"/>
            <com.project.indotuber.fonts.MontserratBoldTextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_subTitle"
                android:textSize="16sp"
                android:textColor="#9d9d9d"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <com.project.indotuber.fonts.MontserratBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="#555555"
                    android:text="@string/faq_question_1"/>
                <com.project.indotuber.fonts.UbuntuRegulerTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginLeft="15dp"
                    android:textColor="#555555"
                    android:text="@string/faq_answer_1" />
                <com.project.indotuber.fonts.MontserratBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="#555555"
                    android:text="@string/faq_question_2"/>
                <com.project.indotuber.fonts.UbuntuRegulerTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginLeft="15dp"
                    android:textColor="#555555"
                    android:text="@string/faq_answer_2" />
                <com.project.indotuber.fonts.MontserratBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="#555555"
                    android:text="@string/faq_question_3"/>
                <com.project.indotuber.fonts.UbuntuRegulerTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginLeft="15dp"
                    android:textColor="#555555"
                    android:text="@string/faq_answer_3" />
                <com.project.indotuber.fonts.MontserratBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="#555555"
                    android:text="@string/faq_question_4"/>
                <com.project.indotuber.fonts.UbuntuRegulerTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginLeft="15dp"
                    android:textColor="#555555"
                    android:text="@string/faq_answer_4" />
                <com.project.indotuber.fonts.MontserratBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="#555555"
                    android:text="@string/faq_question_5"/>
                <com.project.indotuber.fonts.UbuntuRegulerTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginLeft="15dp"
                    android:textColor="#555555"
                    android:text="@string/faq_answer_5" />
                <com.project.indotuber.fonts.MontserratBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="#555555"
                    android:text="@string/faq_question_6"/>
                <com.project.indotuber.fonts.UbuntuRegulerTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginLeft="15dp"
                    android:textColor="#555555"
                    android:text="@string/faq_answer_6" />
                <com.project.indotuber.fonts.MontserratBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="#555555"
                    android:text="@string/faq_question_7"/>
                <com.project.indotuber.fonts.UbuntuRegulerTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginLeft="15dp"
                    android:textColor="#555555"
                    android:text="@string/faq_answer_7" />
                <com.project.indotuber.fonts.MontserratBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="#555555"
                    android:text="@string/faq_question_8"/>
                <com.project.indotuber.fonts.UbuntuRegulerTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginLeft="15dp"
                    android:textColor="#555555"
                    android:text="@string/faq_answer_8" />
                <com.project.indotuber.fonts.MontserratBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="#555555"
                    android:text="@string/faq_question_9"/>
                <com.project.indotuber.fonts.UbuntuRegulerTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginLeft="15dp"
                    android:textColor="#555555"
                    android:text="@string/faq_answer_9" />
                <com.project.indotuber.fonts.MontserratBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="#555555"
                    android:text="@string/faq_question_10"/>
                <com.project.indotuber.fonts.UbuntuRegulerTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginLeft="15dp"
                    android:textColor="#555555"
                    android:text="@string/faq_answer_10" />
                <com.project.indotuber.fonts.MontserratBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="#555555"
                    android:text="@string/faq_question_11"/>
                <com.project.indotuber.fonts.UbuntuRegulerTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginLeft="15dp"
                    android:textColor="#555555"
                    android:text="@string/faq_answer_11" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>